--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-  <title>Rate Shows</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <ul class="nav-ul">
-        <li class="link title"><a href="#">Rate<span>Shows</span> </a></li>
-        <li><a class="link shows active" href="#">Shows</a></li>
-        <li><a class="link contact" href="#">Contact Us</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-  <div class="movies"></div>
-  <div id="comments-wrapper" class="d-none">
-    <div class="comments"></div>
-  </div>
-</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title>Movietify</title>
+  </head>
+  <body>
+    <header>
+      <h1 class="logo">Movietify</h1>
+      <nav>
+        <ul class="nav-container">
+          <p class="link mymovies"></p>
+        </ul>
+      </nav>
+    </header>
+    <section class="movies-section" id="moviesList"></section>
+    <footer>
+      <h2 class="footer-text">Made by Ismail</h2>
+    </footer>
+  </body>
 </html>
