Modify index.html, README.md

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
     <header>
       <h1 class="logo">Movietify</h1>
       <nav>
-        <ul class="nav-container">
+        <div class="nav-container">
           <p class="link mymovies"></p>
-        </ul>
+        </div>
       </nav>
     </header>
     <section class="movies-section" id="moviesList"></section>
